Maps: Fixed small visual issue with nulls item on legend -- needed margin to avoid being cut off when selected.

--- a/EnglishLearners/dev/assets/css/main-highcontrast.css
+++ b/EnglishLearners/dev/assets/css/main-highcontrast.css
@@ -5721,6 +5721,7 @@ button:hover,
     height: 35px;
     margin-left: auto;
     margin-right: auto;
+	margin-bottom: 10px;
     cursor: pointer;
 }
 
